--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -4,7 +4,8 @@
   flex-wrap: wrap;
   max-width: 880px;
   margin: 0;
-  margin-top: 67px;
+  /*margin-top: 67px;*/
+  margin-top: 100px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -13,4 +14,20 @@
   font-size: 18px;
   line-height: 16px;
   color: #545454;
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    display: flex;
+    justify-content: flex-start;
+    max-width: 282px;
+    margin: 0;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .footer__container {
+    margin: 0;
+  }
 }
