--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -31,3 +31,15 @@
     margin: 0;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .footer {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    max-width: 282px;
+  }
+}
