--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -36,12 +36,18 @@
   margin: 0;
   margin-right: 10px;
   text-align: start;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__description {
   text-align: start;
   font-size: 18px;
   margin-top: 16px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-data {
@@ -68,6 +74,16 @@
 
 .profile__add-picture:hover {
   opacity: 0.5;
+}
+
+@media screen and (max-width: 768px) {
+  .profile {
+    max-width: 720px;
+  }
+
+  .profile__add-picture {
+    min-width: 120px;
+  }
 }
 
 @media screen and (max-width: 320px) {
