--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url("../vendor/normalize.css");
+@import url("../blocks/fonts.css");
 @import url("../blocks/page.css");
 @import url("../blocks/main.css");
 @import url("../blocks/header.css");
