--- a/pages/index.css
+++ b/pages/index.css
@@ -6,4 +6,6 @@
 @import url("../blocks/profile.css");
 @import url("../blocks/gallery.css");
 @import url("../blocks/popup.css");
+@import url("../blocks/popupPicture.css");
+@import url("../blocks/popupShow.css");
 @import url("../blocks/footer.css");
