--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -52,7 +52,7 @@
   border: 0;
   border-bottom: 1px solid grey;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 30px; /* 30px */
 }
 
 .popup__desc-update {
@@ -63,7 +63,20 @@
   border: 0;
   border-bottom: 1px solid grey;
   margin: 0;
-  margin-bottom: 48px;
+  margin-bottom: 48px; /* 48px; */
+}
+
+.popup__input_type_error {
+  border-bottom: 1px solid red;
+}
+
+.popup__error {
+  margin-left: -126px;
+  color: red;
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 15px;
 }
 
 .popup__buton-update {
@@ -79,6 +92,21 @@
 
 .popup__buton-update:hover {
   opacity: 0.7;
+}
+
+.popup__button_inactive {
+  color: #b8b8b8;
+  background: #ededed;
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  opacity: 0.5;
+}
+
+.popup__input-error_active {
+  opacity: 1;
 }
 
 @media screen and (max-width: 320px) {
