--- a/blocks/popupPicture.css
+++ b/blocks/popupPicture.css
@@ -66,6 +66,19 @@
   margin-bottom: 48px;
 }
 
+.popup__input_type_error {
+  border-bottom: 1px solid red;
+}
+
+.popup__error {
+  margin-left: -126px;
+  color: red;
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 15px;
+}
+
 .popup-picture__buton-create {
   font-size: 18px;
   text-align: center;
@@ -79,6 +92,21 @@
 
 .popup-picture__buton-create:hover {
   opacity: 0.7;
+}
+
+.popup__button_inactive {
+  color: #b8b8b8;
+  background: #ededed;
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  opacity: 0.5;
+}
+
+.popup__input-error_active {
+  opacity: 1;
 }
 
 @media screen and (max-width: 320px) {
