--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -6,6 +6,7 @@
   top: 0;
   left: 0;
   background-color: #00000081;
+  cursor: pointer;
 }
 
 .popup__close {
@@ -34,6 +35,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  cursor: default;
 }
 
 .popup__title-update {
@@ -41,7 +43,6 @@
   color: #000000;
   text-align: start;
   margin: 0;
-  margin-bottom: 54px;
 }
 
 .popup__name-update {
@@ -52,7 +53,7 @@
   border: 0;
   border-bottom: 1px solid grey;
   margin: 0;
-  margin-bottom: 30px; /* 30px */
+  margin-top: 54px; /* 30px */
 }
 
 .popup__desc-update {
@@ -63,7 +64,7 @@
   border: 0;
   border-bottom: 1px solid grey;
   margin: 0;
-  margin-bottom: 48px; /* 48px; */
+  margin-top: 30px;
 }
 
 .popup__input_type_error {
@@ -71,7 +72,6 @@
 }
 
 .popup__error {
-  margin-left: -126px;
   color: red;
   font-family: Inter;
   font-size: 12px;
@@ -88,6 +88,7 @@
   opacity: 1;
   height: 50px;
   cursor: pointer;
+  margin-top: 48px;
 }
 
 .popup__buton-update:hover {
@@ -107,6 +108,14 @@
 
 .popup__input-error_active {
   opacity: 1;
+}
+
+.input-name-error {
+  text-align: left;
+}
+
+.input-desc-error {
+  text-align: left;
 }
 
 @media screen and (max-width: 320px) {
@@ -129,15 +138,15 @@
     color: #000000;
     text-align: start;
     margin: 0;
-    margin-bottom: 76px;
   }
 
   .popup__desc-update {
-    margin-bottom: 46px;
+    margin-top: 46px;
   }
 
   .popup__buton-update {
     font-size: 14px;
     height: 46px;
+    margin-top: 46px;
   }
 }
