--- a/blocks/popupShow.css
+++ b/blocks/popupShow.css
@@ -6,6 +6,7 @@
   top: 0;
   left: 0;
   background-color: #00000081;
+  cursor: pointer;
 }
 
 .popup-show__close {
@@ -32,6 +33,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  cursor: default;
 }
 
 .popup-show__add {
