--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -31,6 +31,7 @@
 }
 
 .profile__name {
+  width: 450px;
   font-size: 42px;
   line-height: 56px;
   margin: 0;
@@ -42,6 +43,7 @@
 }
 
 .profile__description {
+  width: 400px;
   text-align: start;
   font-size: 18px;
   margin-top: 16px;
@@ -81,6 +83,13 @@
     max-width: 720px;
   }
 
+  .profile__name {
+    width: 300px;
+  }
+
+  .profile__description {
+    width: 300px;
+  }
   .profile__add-picture {
     min-width: 120px;
   }
