--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -16,7 +16,8 @@
   color: #545454;
 }
 
-@media screen and (max-width: 320px) {
+/*@media screen and (max-width: 320px) {*/
+@media screen and (min-width: 320px) and (max-width: 880px) {
   .footer {
     display: flex;
     justify-content: flex-start;
@@ -32,7 +33,8 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {*/
+@media screen and (min-width: 320px) and (max-width: 880px) {
   .footer {
     max-width: 720px;
   }
