--- a/blocks/header.css
+++ b/blocks/header.css
@@ -19,13 +19,15 @@
   padding-top: 41px;
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {*/
+@media screen and (min-width: 320px) and (max-width: 880px) {
   .header {
     max-width: 720px;
   }
 }
 
-@media screen and (max-width: 320px) {
+/*@media screen and (max-width: 320px) {*/
+@media screen and (min-width: 320px) and (max-width: 880px) {
   .header {
     max-width: 282px;
   }
