--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -126,7 +126,8 @@
   text-align: left;
 }
 
-@media screen and (max-width: 320px) {
+/*@media screen and (max-width: 320px) {*/
+@media screen and (min-width: 320px) and (max-width: 880px) {
   .popup__container {
     width: 282px;
     height: 322px;
