--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -78,7 +78,8 @@
   opacity: 0.5;
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {*/
+@media screen and (min-width: 320px) and (max-width: 880px) {
   .profile {
     max-width: 720px;
   }
@@ -95,7 +96,8 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+/*@media screen and (max-width: 320px) {*/
+@media screen and (min-width: 320px) and (max-width: 880px) {
   .profile {
     max-width: 282px;
     width: 100%;
